// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`migrate v3 -> v4 additional attributes values 1`] = `
Array [
  Object {
    "value": true,
    "variable": "foobar",
  },
  Object {
    "value": false,
    "variable": "fizzpop",
  },
]
`;

exports[`migrate v3 -> v4 additional attributes values 2`] = `
Object {
  "id": "noBoolean",
}
`;

exports[`migrate v3 -> v4 migrates additional attributes 1`] = `
Object {
  "codebook": Object {},
  "stages": Array [
    Object {
      "prompts": Array [
        Object {
          "additionalAttributes": Array [
            Object {
              "value": true,
              "variable": "foobar",
            },
            Object {
              "value": false,
              "variable": "fizzpop",
            },
          ],
          "id": "someBoolean",
        },
        Object {
          "id": "noBoolean",
        },
      ],
    },
  ],
}
`;

exports[`migrate v3 -> v4 migrates codebook 1`] = `
Object {
  "codebook": Object {
    "edge": Object {
      "edgeType": Object {
        "name": "bar_bazz",
        "variables": Object {
          "buzz": Object {
            "name": "fizz_pop",
          },
        },
      },
    },
    "ego": Object {
      "variables": Object {
        "foo": Object {
          "name": "foo_bar",
        },
      },
    },
    "node": Object {
      "allowedTypeName": Object {
        "name": "okay_-type:.name",
      },
      "disallowedType": Object {
        "name": "disallowed_type_name",
        "variables": Object {
          "invalidExampleVariable": Object {
            "name": "variable_with_disallowed_characters",
            "options": Array [
              Object {
                "label": "foo",
                "value": "f_o_o",
              },
              Object {
                "label": "foo2",
                "value": "f_o_o2",
              },
              Object {
                "label": "bar",
                "value": "b_a-r:.",
              },
              Object {
                "label": "bazz",
                "value": 5,
              },
            ],
          },
          "invalidExampleVariableDuplicate": Object {
            "name": "variable_with_disallowed_characters2",
          },
          "validExampleVariable": Object {
            "name": "variable_with-allowed:characters.",
          },
        },
      },
      "disallowedTypeDuplicate": Object {
        "name": "disallowed_type_name2",
      },
    },
  },
  "stages": Array [],
}
`;

exports[`migrate v3 -> v4 option values 1`] = `
Array [
  Object {
    "label": "foo",
    "value": "f_o_o",
  },
  Object {
    "label": "foo2",
    "value": "f_o_o2",
  },
  Object {
    "label": "bar",
    "value": "b_a-r:.",
  },
  Object {
    "label": "bazz",
    "value": 5,
  },
]
`;

exports[`migrate v3 -> v4 type names 1`] = `
Object {
  "allowedTypeName": Object {
    "name": "okay_-type:.name",
  },
  "disallowedType": Object {
    "name": "disallowed_type_name",
    "variables": Object {
      "invalidExampleVariable": Object {
        "name": "variable_with_disallowed_characters",
        "options": Array [
          Object {
            "label": "foo",
            "value": "f_o_o",
          },
          Object {
            "label": "foo2",
            "value": "f_o_o2",
          },
          Object {
            "label": "bar",
            "value": "b_a-r:.",
          },
          Object {
            "label": "bazz",
            "value": 5,
          },
        ],
      },
      "invalidExampleVariableDuplicate": Object {
        "name": "variable_with_disallowed_characters2",
      },
      "validExampleVariable": Object {
        "name": "variable_with-allowed:characters.",
      },
    },
  },
  "disallowedTypeDuplicate": Object {
    "name": "disallowed_type_name2",
  },
}
`;

exports[`migrate v3 -> v4 variable names 1`] = `
Object {
  "invalidExampleVariable": Object {
    "name": "variable_with_disallowed_characters",
    "options": Array [
      Object {
        "label": "foo",
        "value": "f_o_o",
      },
      Object {
        "label": "foo2",
        "value": "f_o_o2",
      },
      Object {
        "label": "bar",
        "value": "b_a-r:.",
      },
      Object {
        "label": "bazz",
        "value": 5,
      },
    ],
  },
  "invalidExampleVariableDuplicate": Object {
    "name": "variable_with_disallowed_characters2",
  },
  "validExampleVariable": Object {
    "name": "variable_with-allowed:characters.",
  },
}
`;
